toggle spacing fixed

--- a/src/main/resources/public/css/custom-bootstrap.css
+++ b/src/main/resources/public/css/custom-bootstrap.css
@@ -3,7 +3,7 @@
 	margin-left: 10px;
 }
 
-.toggle {
+.togglebutton label .toggle, .togglebutton label input[type=checkbox][disabled] + .toggle {
 	margin-left: 4px;
 }
 
